345 (2)/nml.output
Terminals unused in grammar

   RULE_REF
   OP_OR_RULE
   OP_AND_RULE
   MODE_AND_RULE
   MODE_OR_RULE


Grammar

    0 $accept: nml_description $end

    1 nml_description: declaration_list rule_list

    2 rule_list: rule
    3          | rule_list rule

    4 rule: op_rule
    5     | mode_rule

    6 mode_rule: or_mode_rule
    7          | and_mode_rule

    8 and_mode_rule: MODE IDENTIFIER LPAREN parameter_declaration_list RPAREN LBRACE syntax_attribute_list and_image_attribute_list RBRACE

    9 or_mode_rule: MODE IDENTIFIER LPAREN mode_rule_name_list RPAREN LBRACE or_image_attribute_list RBRACE

   10 mode_rule_name_list: mode_rule_name
   11                    | mode_rule_name_list mode_rule_name

   12 mode_rule_name: IDENTIFIER

   13 op_rule: and_op_rule
   14        | or_op_rule

   15 and_op_rule: OP IDENTIFIER LPAREN parameter_declaration_list RPAREN LBRACE syntax_attribute_list and_image_attribute_list RBRACE

   16 and_image_attribute_list: /* empty */
   17                         | and_image_attribute_list and_image_attribute

   18 and_image_attribute: IMAGE COLON and_field_encoding_list instr_properties_opt SEMI

   19 instr_properties_opt: /* empty */
   20                     | COMMA instr_properties

   21 instr_properties: instr_property
   22                 | instr_properties COMMA instr_property

   23 instr_property: /* empty */
   24               | CYCLES LPAREN integer_expression RPAREN
   25               | CYCLES LPAREN integer_expression BITOR integer_expression RPAREN
   26               | DELAY_SLOTS LPAREN integer_expression RPAREN
   27               | CHESS_PC_OFFSET LPAREN integer_expression RPAREN
   28               | CLASS LPAREN IDENTIFIER RPAREN

   29 and_field_encoding_list: and_field_encoding enc_alias_opt
   30                        | and_field_encoding_list DCOLON and_field_encoding enc_alias_opt

   31 enc_alias_opt: /* empty */
   32              | enc_alias

   33 enc_alias: LESS ALIAS GRT

   34 and_field_encoding: STRING_CONST
   35                   | ENUM_NAME POINT enum_element_name
   36                   | rule_instant_name image_nr_opt

   37 rule_instant_name: IDENTIFIER

   38 syntax_attribute_list: /* empty */
   39                      | syntax_attribute_list syntax_attribute

   40 syntax_attribute: SYNTAX COLON syntax_encoding_list SEMI

   41 syntax_encoding_list: syntax_encoding

   42 syntax_encoding: syntax_encoding_element
   43                | syntax_encoding syntax_encoding_element

   44 syntax_encoding_element: STRING_CONST
   45                        | rule_instant_name syntax_nr_opt

   46 syntax_nr_opt: /* empty */
   47              | syntax_nr

   48 syntax_nr: POINT integer

   49 parameter_declaration_list: /* empty */
   50                           | parameter_declaration
   51                           | parameter_declaration_list COMMA parameter_declaration

   52 parameter_declaration: IDENTIFIER COLON r_name

   53 r_name: IDENTIFIER
   54       | ENUM_NAME

   55 or_op_rule: OP IDENTIFIER LPAREN op_rule_name_list RPAREN LBRACE or_image_attribute_list RBRACE

   56 or_image_attribute_list: or_image_attribute

   57 or_image_attribute: IMAGE COLON or_encoding_list SEMI

   58 or_encoding_list: or_field_encoding_list
   59                 | or_encoding_list BITOR or_field_encoding_list

   60 or_field_encoding_list: or_field_encoding
   61                       | or_field_encoding_list DCOLON or_field_encoding

   62 enum_element_name: IDENTIFIER

   63 or_field_encoding: bit_string_literal
   64                  | ENUM_NAME POINT enum_element_name
   65                  | rule_instant_name image_nr_opt

   66 image_nr_opt: /* empty */
   67             | image_nr

   68 image_nr: POINT integer

   69 bit_string_literal: STRING_CONST

   70 op_rule_name: IDENTIFIER

   71 op_rule_name_list: op_rule_name
   72                  | op_rule_name_list BITOR op_rule_name

   73 declaration_list: declaration
   74                 | declaration_list declaration

   75 declaration: number_declaration
   76            | enum_declaration
   77            | cst_declaration
   78            | type_declaration
   79            | storage_declaration
   80            | start_declaration

   81 start_declaration: START IDENTIFIER SEMI

   82 storage_declaration: memory_declaration
   83                    | register_declaration

   84 register_declaration: REG IDENTIFIER valid_address_declaration LESS type_id COMMA address_type GRT SEMI

   85 memory_declaration: MEM IDENTIFIER valid_address_declaration LESS type_id COMMA address_type GRT SEMI

   86 address_type: type_id

   87 valid_address_declaration: /* empty */
   88                          | LBRACK address_range address_step_opt RBRACK

   89 address_step_opt: /* empty */
   90                 | COMMA integer_expression

   91 type_declaration: TYPE IDENTIFIER LESS integer COMMA val_type GRT SEMI

   92 address_range: integer_expression
   93              | integer_expression DOUBLEDOT integer_expression

   94 val_type: VAL_TYPE

   95 cst_declaration: CST IDENTIFIER LESS type_id GRT cst_value_opt SEMI

   96 cst_value_opt: /* empty */
   97              | ASSIGN INT_CONST
   98              | ASSIGN BIN_CONST
   99              | ASSIGN HEX_CONST

  100 type_id: IDENTIFIER

  101 enum_declaration: ENUM IDENTIFIER LBRACE enum_list RBRACE SEMI

  102 enum_list: enum_element
  103          | enum_list COMMA enum_element

  104 enum_element: IDENTIFIER mnemonic_opt init_opt

  105 mnemonic_opt: /* empty */
  106             | STRING_CONST

  107 init_opt: /* empty */
  108         | ASSIGN integer_expression

  109 number_declaration: DEF IDENTIFIER ASSIGN integer_expression SEMI

  110 integer_expression: integer_expression PLUS integer_expression
  111                   | integer_expression MINUS integer_expression
  112                   | integer_expression MUL integer_expression
  113                   | integer_expression DIV integer_expression
  114                   | MINUS integer_expression
  115                   | integer_expression POW integer_expression
  116                   | LPAREN integer_expression RPAREN
  117                   | integer
  118                   | number_name

  119 number_name: IDENTIFIER

  120 integer: INT_CONST


Terminals, with rules where they appear

$end (0) 0
error (256)
ASSIGN (258) 97 98 99 108 109
DEF (259) 109
SEMI (260) 18 40 57 81 84 85 91 95 101 109
IDENTIFIER (261) 8 9 12 15 28 37 52 53 55 62 70 81 84 85 91 95 100
    101 104 109 119
PLUS (262) 110
MINUS (263) 111 114
DIV (264) 113
POW (265) 115
LPAREN (266) 8 9 15 24 25 26 27 28 55 116
RPAREN (267) 8 9 15 24 25 26 27 28 55 116
LBRACE (268) 8 9 15 55 101
RBRACE (269) 8 9 15 55 101
ENUM (270) 101
STRING_CONST (271) 34 44 69 106
COMMA (272) 20 22 51 84 85 90 91 103
CST (273) 95
LESS (274) 33 84 85 91 95
GRT (275) 33 84 85 91 95
TYPE (276) 91
INT_CONST (277) 97 120
BIN_CONST (278) 98
HEX_CONST (279) 99
VAL_TYPE (280) 94
SYNTAX (281) 40
MEM (282) 85
LBRACK (283) 88
RBRACK (284) 88
DOUBLEDOT (285) 93
REG (286) 84
START (287) 81
OP (288) 15 55
RULE_REF (289)
DCOLON (290) 30 61
IMAGE (291) 18 57
POINT (292) 35 48 64 68
COLON (293) 18 40 52 57
BITOR (294) 25 59 72
OP_OR_RULE (295)
OP_AND_RULE (296)
MODE_AND_RULE (297)
MODE_OR_RULE (298)
CYCLES (299) 24 25
ALIAS (300) 33
CHESS_PC_OFFSET (301) 27
CLASS (302) 28
DELAY_SLOTS (303) 26
MODE (304) 8 9
ENUM_NAME (305) 35 54 64
MUL (306) 112
NEG (307)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
nml_description (54)
    on left: 1, on right: 0
rule_list (55)
    on left: 2 3, on right: 1 3
rule (56)
    on left: 4 5, on right: 2 3
mode_rule (57)
    on left: 6 7, on right: 5
and_mode_rule (58)
    on left: 8, on right: 7
or_mode_rule (59)
    on left: 9, on right: 6
mode_rule_name_list (60)
    on left: 10 11, on right: 9 11
mode_rule_name (61)
    on left: 12, on right: 10 11
op_rule (62)
    on left: 13 14, on right: 4
and_op_rule (63)
    on left: 15, on right: 13
and_image_attribute_list (64)
    on left: 16 17, on right: 8 15 17
and_image_attribute (65)
    on left: 18, on right: 17
instr_properties_opt (66)
    on left: 19 20, on right: 18
instr_properties (67)
    on left: 21 22, on right: 20 22
instr_property (68)
    on left: 23 24 25 26 27 28, on right: 21 22
and_field_encoding_list (69)
    on left: 29 30, on right: 18 30
enc_alias_opt (70)
    on left: 31 32, on right: 29 30
enc_alias (71)
    on left: 33, on right: 32
and_field_encoding (72)
    on left: 34 35 36, on right: 29 30
rule_instant_name (73)
    on left: 37, on right: 36 45 65
syntax_attribute_list (74)
    on left: 38 39, on right: 8 15 39
syntax_attribute (75)
    on left: 40, on right: 39
syntax_encoding_list (76)
    on left: 41, on right: 40
syntax_encoding (77)
    on left: 42 43, on right: 41 43
syntax_encoding_element (78)
    on left: 44 45, on right: 42 43
syntax_nr_opt (79)
    on left: 46 47, on right: 45
syntax_nr (80)
    on left: 48, on right: 47
parameter_declaration_list (81)
    on left: 49 50 51, on right: 8 15 51
parameter_declaration (82)
    on left: 52, on right: 50 51
r_name (83)
    on left: 53 54, on right: 52
or_op_rule (84)
    on left: 55, on right: 14
or_image_attribute_list (85)
    on left: 56, on right: 9 55
or_image_attribute (86)
    on left: 57, on right: 56
or_encoding_list (87)
    on left: 58 59, on right: 57 59
or_field_encoding_list (88)
    on left: 60 61, on right: 58 59 61
enum_element_name (89)
    on left: 62, on right: 35 64
or_field_encoding (90)
    on left: 63 64 65, on right: 60 61
image_nr_opt (91)
    on left: 66 67, on right: 36 65
image_nr (92)
    on left: 68, on right: 67
bit_string_literal (93)
    on left: 69, on right: 63
op_rule_name (94)
    on left: 70, on right: 71 72
op_rule_name_list (95)
    on left: 71 72, on right: 55 72
declaration_list (96)
    on left: 73 74, on right: 1 74
declaration (97)
    on left: 75 76 77 78 79 80, on right: 73 74
start_declaration (98)
    on left: 81, on right: 80
storage_declaration (99)
    on left: 82 83, on right: 79
register_declaration (100)
    on left: 84, on right: 83
memory_declaration (101)
    on left: 85, on right: 82
address_type (102)
    on left: 86, on right: 84 85
valid_address_declaration (103)
    on left: 87 88, on right: 84 85
address_step_opt (104)
    on left: 89 90, on right: 88
type_declaration (105)
    on left: 91, on right: 78
address_range (106)
    on left: 92 93, on right: 88
val_type (107)
    on left: 94, on right: 91
cst_declaration (108)
    on left: 95, on right: 77
cst_value_opt (109)
    on left: 96 97 98 99, on right: 95
type_id (110)
    on left: 100, on right: 84 85 86 95
enum_declaration (111)
    on left: 101, on right: 76
enum_list (112)
    on left: 102 103, on right: 101 103
enum_element (113)
    on left: 104, on right: 102 103
mnemonic_opt (114)
    on left: 105 106, on right: 104
init_opt (115)
    on left: 107 108, on right: 104
number_declaration (116)
    on left: 109, on right: 75
integer_expression (117)
    on left: 110 111 112 113 114 115 116 117 118, on right: 24 25 26
    27 90 92 93 108 109 110 111 112 113 114 115 116
number_name (118)
    on left: 119, on right: 118
integer (119)
    on left: 120, on right: 48 68 91 117


state 0

    0 $accept: . nml_description $end

    DEF    shift, and go to state 1
    ENUM   shift, and go to state 2
    CST    shift, and go to state 3
    TYPE   shift, and go to state 4
    MEM    shift, and go to state 5
    REG    shift, and go to state 6
    START  shift, and go to state 7

    nml_description       go to state 8
    declaration_list      go to state 9
    declaration           go to state 10
    start_declaration     go to state 11
    storage_declaration   go to state 12
    register_declaration  go to state 13
    memory_declaration    go to state 14
    type_declaration      go to state 15
    cst_declaration       go to state 16
    enum_declaration      go to state 17
    number_declaration    go to state 18


state 1

  109 number_declaration: DEF . IDENTIFIER ASSIGN integer_expression SEMI

    IDENTIFIER  shift, and go to state 19


state 2

  101 enum_declaration: ENUM . IDENTIFIER LBRACE enum_list RBRACE SEMI

    IDENTIFIER  shift, and go to state 20


state 3

   95 cst_declaration: CST . IDENTIFIER LESS type_id GRT cst_value_opt SEMI

    IDENTIFIER  shift, and go to state 21


state 4

   91 type_declaration: TYPE . IDENTIFIER LESS integer COMMA val_type GRT SEMI

    IDENTIFIER  shift, and go to state 22


state 5

   85 memory_declaration: MEM . IDENTIFIER valid_address_declaration LESS type_id COMMA address_type GRT SEMI

    IDENTIFIER  shift, and go to state 23


state 6

   84 register_declaration: REG . IDENTIFIER valid_address_declaration LESS type_id COMMA address_type GRT SEMI

    IDENTIFIER  shift, and go to state 24


state 7

   81 start_declaration: START . IDENTIFIER SEMI

    IDENTIFIER  shift, and go to state 25


state 8

    0 $accept: nml_description . $end

    $end  shift, and go to state 26


state 9

    1 nml_description: declaration_list . rule_list
   74 declaration_list: declaration_list . declaration

    DEF    shift, and go to state 1
    ENUM   shift, and go to state 2
    CST    shift, and go to state 3
    TYPE   shift, and go to state 4
    MEM    shift, and go to state 5
    REG    shift, and go to state 6
    START  shift, and go to state 7
    OP     shift, and go to state 27
    MODE   shift, and go to state 28

    rule_list             go to state 29
    rule                  go to state 30
    mode_rule             go to state 31
    and_mode_rule         go to state 32
    or_mode_rule          go to state 33
    op_rule               go to state 34
    and_op_rule           go to state 35
    or_op_rule            go to state 36
    declaration           go to state 37
    start_declaration     go to state 11
    storage_declaration   go to state 12
    register_declaration  go to state 13
    memory_declaration    go to state 14
    type_declaration      go to state 15
    cst_declaration       go to state 16
    enum_declaration      go to state 17
    number_declaration    go to state 18


state 10

   73 declaration_list: declaration .

    $default  reduce using rule 73 (declaration_list)


state 11

   80 declaration: start_declaration .

    $default  reduce using rule 80 (declaration)


state 12

   79 declaration: storage_declaration .

    $default  reduce using rule 79 (declaration)


state 13

   83 storage_declaration: register_declaration .

    $default  reduce using rule 83 (storage_declaration)


state 14

   82 storage_declaration: memory_declaration .

    $default  reduce using rule 82 (storage_declaration)


state 15

   78 declaration: type_declaration .

    $default  reduce using rule 78 (declaration)


state 16

   77 declaration: cst_declaration .

    $default  reduce using rule 77 (declaration)


state 17

   76 declaration: enum_declaration .

    $default  reduce using rule 76 (declaration)


state 18

   75 declaration: number_declaration .

    $default  reduce using rule 75 (declaration)


state 19

  109 number_declaration: DEF IDENTIFIER . ASSIGN integer_expression SEMI

    ASSIGN  shift, and go to state 38


state 20

  101 enum_declaration: ENUM IDENTIFIER . LBRACE enum_list RBRACE SEMI

    LBRACE  shift, and go to state 39


state 21

   95 cst_declaration: CST IDENTIFIER . LESS type_id GRT cst_value_opt SEMI

    LESS  shift, and go to state 40


state 22

   91 type_declaration: TYPE IDENTIFIER . LESS integer COMMA val_type GRT SEMI

    LESS  shift, and go to state 41


state 23

   85 memory_declaration: MEM IDENTIFIER . valid_address_declaration LESS type_id COMMA address_type GRT SEMI
